Updated CSS for Card component and added a main element in App.css to contain card components

--- a/pokemon-collection/src/App.css
+++ b/pokemon-collection/src/App.css
@@ -4,6 +4,13 @@
   text-align: center;
 }
 
+main {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  /* justify-content: center; */
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
